--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,40 @@
 {
-  "extends": "next/core-web-vitals"
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "plugin:react/recommended",
+        "standard",
+        "plugin:@next/next/recommended",
+        "prettier"
+    ],
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react",
+        "prettier"
+    ],
+    "rules": {
+        "prettier/prettier": [
+            "error",
+            {
+                "printWidth": 100,
+                "tabWidth": 2,
+                "singleQuote": true,
+                "trailingComma": "none",
+                "semi": false,
+                "bracketSpacing": true,
+                "jsxBracketSameLine": false,
+                "parser": "flow"
+            }
+        ],
+        "react/react-in-jsx-scope": "off",
+        "react/prop-types": "off"
+    }
 }
